--- a/include/nbl/config/BuildConfigOptions.h.in
+++ b/include/nbl/config/BuildConfigOptions.h.in
@@ -16,6 +16,8 @@
 #cmakedefine _NBL_PLATFORM_OSX_
 #cmakedefine _NBL_PLATFORM_ANDROID_
 
+#cmakedefine _NBL_BUILD_WITH_WAYLAND
+
 // graphics API backend
 #cmakedefine _NBL_COMPILE_WITH_OPENGL_
 #cmakedefine _NBL_COMPILE_WITH_VULKAN_
