--- a/src/nbl/CMakeLists.txt
+++ b/src/nbl/CMakeLists.txt
@@ -386,12 +386,13 @@ nbl_adjust_definitions() # macro defined in root CMakeLists
 # TODO: Change all MACROS into FUNCTIONS (if possible, need to clarify variable scoping rules)
 macro(nbl_target_link_zlib _trgt)
 	add_dependencies(${_trgt} zlibstatic)
+	target_link_libraries(zlibstatic)
 
-	target_link_libraries(${_trgt} INTERFACE
-		$<$<CONFIG:Debug>:${ZLIB_LIBRARY_DEBUG}>
-		$<$<CONFIG:Release>:${ZLIB_LIBRARY_RELEASE}>
-		$<$<CONFIG:RelWithDebInfo>:${ZLIB_LIBRARY_RELWITHDEBINFO}>
-	)
+	#target_link_libraries(${_trgt} INTERFACE
+	#	$<$<CONFIG:Debug>:${ZLIB_LIBRARY_DEBUG}>
+	#	$<$<CONFIG:Release>:${ZLIB_LIBRARY_RELEASE}>
+	#	$<$<CONFIG:RelWithDebInfo>:${ZLIB_LIBRARY_RELWITHDEBINFO}>
+	#)
 	target_include_directories(${_trgt} PUBLIC ${THIRD_PARTY_SOURCE_DIR}/zlib)
 endmacro()
 
