Revert changes of this commit to be able to test Wayland

--- a/src/nbl/CMakeLists.txt
+++ b/src/nbl/CMakeLists.txt
@@ -554,7 +554,7 @@ endif()
 
 target_compile_definitions(Nabla 
 	PRIVATE	_NBL_STATIC_LIB_ EGL_STATIC SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS $<$<BOOL:${WIN32}>:VK_USE_PLATFORM_WIN32_KHR>
-	PUBLIC	UNW_LOCAL_ONLY $<$<BOOL:${OpenGL_EGL_FOUND}>:WL_EGL_PLATFORM>
+	PUBLIC	UNW_LOCAL_ONLY # $<$<BOOL:${OpenGL_EGL_FOUND}>:WL_EGL_PLATFORM>
 )
 
 if (MSVC) #on MSVC it won't compile without this option!
