--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -99,9 +99,10 @@ else()
 endif()]]
 # EGL
 set(EGL_NO_GLEW ON)
-if (OpenGL_EGL_FOUND AND WAYLAND_CLIENT_FOUND AND UNIX AND NOT APPLE)
-	set(EGL_UNIX_USE_WAYLAND ON)
-endif()
+#if (OpenGL_EGL_FOUND AND WAYLAND_CLIENT_FOUND AND UNIX AND NOT APPLE)
+#	set(EGL_UNIX_USE_WAYLAND ON)
+#endif()
+set(EGL_UNIX_USE_WAYLAND OFF)
 add_subdirectory(EGL/EGL)
 
 # zlib (target is zlibstatic)
