--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -33,7 +33,12 @@ set(nbl_resources_to_embed
   # generic GLSL headers after this line
   "nbl/builtin/glsl/macros.glsl"
   "nbl/builtin/glsl/algorithm.glsl"
+  # barycentric
+  "nbl/builtin/glsl/barycentric/frag.glsl"
+  "nbl/builtin/glsl/barycentric/vert.glsl"
+  "nbl/builtin/glsl/barycentric/utils.glsl"
   # bump mapping
+  "nbl/builtin/glsl/bump_mapping/fragment.glsl" # TODO: rename to `frag.glsl`
   "nbl/builtin/glsl/bump_mapping/utils.glsl"
   # bxdf
   "nbl/builtin/glsl/bxdf/common.glsl"
