--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -145,6 +145,8 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/ext/FFT/parameters_struct.glsl"
   "nbl/builtin/glsl/ext/FFT/parameters.glsl"
   "nbl/builtin/glsl/ext/FFT/types.glsl"
+  # CentralLimitBoxBlur
+  "nbl/builtin/glsl/ext/CentralLimitBoxBlur/default_compute_blur.comp"
   "nbl/builtin/glsl/ext/LumaMeter/common.glsl"
   "nbl/builtin/glsl/ext/LumaMeter/impl.glsl"
   "nbl/builtin/glsl/ext/ToneMapper/operators.glsl"
