--- a/src/nbl/builtin/CMakeLists.txt
+++ b/src/nbl/builtin/CMakeLists.txt
@@ -127,6 +127,7 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/workgroup/shared_ballot.glsl"
   "nbl/builtin/glsl/workgroup/shared_clustered.glsl"
   "nbl/builtin/glsl/workgroup/shared_fft.glsl"
+  "nbl/builtin/glsl/workgroup/shared_blur.glsl"
   "nbl/builtin/glsl/workgroup/shared_shuffle.glsl"
   "nbl/builtin/glsl/workgroup/shared_shuffle_relative.glsl"
   "nbl/builtin/glsl/workgroup/shared_vote.glsl"
@@ -147,6 +148,9 @@ set(nbl_resources_to_embed
   "nbl/builtin/glsl/ext/FFT/types.glsl"
   # CentralLimitBoxBlur
   "nbl/builtin/glsl/ext/CentralLimitBoxBlur/default_compute_blur.comp"
+  "nbl/builtin/glsl/ext/CentralLimitBoxBlur/parameters.glsl"
+  "nbl/builtin/glsl/ext/CentralLimitBoxBlur/parameters_struct.glsl"
+
   "nbl/builtin/glsl/ext/LumaMeter/common.glsl"
   "nbl/builtin/glsl/ext/LumaMeter/impl.glsl"
   "nbl/builtin/glsl/ext/ToneMapper/operators.glsl"
