--- a/android-sample/CMakeLists.txt
+++ b/android-sample/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(android-sample-proj)
 
+include(common)
+
 add_library(android-sample SHARED main.cpp)
 
 #https://medium.com/androiddevelopers/getting-started-with-c-and-android-native-activities-2213b402ffff
@@ -10,5 +12,7 @@ target_include_directories(android-sample PRIVATE
 target_link_libraries(android-sample PRIVATE
     android
     egl # spoof egl from 3rdparty dir
-    GLESv1_CM
+    GLESv1_CM # change to GLESv3 later
     log)
+
+nbl_android_create_apk(android-sample 1 1)
