--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <!-- BEGIN_INCLUDE(manifest) -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="@PACKAGE_NAME@">
 
-  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26"/>
+  <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="@TARGET_ANDROID_API_LEVEL@"/>
 
   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
